--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@ border-radius: 15px;
   
 h1 {
 	font-family: "jesaya-1","jesaya-2",sans-serif;
+	padding-left: 60px;
+    text-shadow: 2px 2px 1px #ccc, 2px 2px 1px #fff;
 }
 
 
@@ -51,13 +53,14 @@ background:-webkit-gradient(linear, 0% 0%, 0% 100%, from(#FFFFFF), to(#EEE));
 background:-moz-linear-gradient(0% 90% 90deg, #EEE, #FFF);
   -moz-border-radius: 15px;
 border-radius: 15px;
+margin-left: 770px;
 padding: 10px 50px;
 font-size: 1.15em;
 }
 
 .email {
  padding: 5px 2px 5px 35px;
- margin-bottom:15px;
+/*  margin-bottom:15px; */
  background: url(email-icon.png) 10px center  no-repeat;
 }
 
@@ -97,22 +100,30 @@ border-radius: 5px;
 color: #bbb;
 text-decoration: none;
 }
-
 </style>
-<!--[if !IE 7]>
-	<style type="text/css">
-		#wrap {display:table;height:100%}
-	</style>
-<![endif]-->
-
 <title>Roach Map - Where are the roaches in NYC? - The Great Urban Hack</title>
+<meta name="description" content="A map of New York City cockroach reports in restaurants recorded by the Health Department." />
 <script type="text/javascript" src="http://use.typekit.com/vbg6ymp.js"></script>
 <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+<script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-19554555-1']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
 </head>
 
 <body>
 <div id="container">
-<img src="map.png" style="float:left; padding-bottom:0px;" width="80%" height="80%" alt="Where are the roaches? NOVEMBER 2010"><p>Cockroaches are gross. They spread germs. They defecate on our silverware. They live in our kitchens, our bathrooms. They thrive on our garbage, our leftover food.  And in a city of 8 million, they can be anywhere. But where are they exactly?</p>
+<h1>The New York City Roach Map</h1>
+<img src="/images/roachmap_2010-11-6.png" style="float:left; padding-bottom:0px;" width="80%" height="80%" alt="Where are the roaches? NOVEMBER 2010"><p>Cockroaches are gross. They spread germs. They defecate on our silverware. They live in our kitchens, our bathrooms. They thrive on our garbage, our leftover food.  And in a city of 8 million, they can be anywhere. But where are they exactly?</p>
 
 <p>Right now there's no up-to-date way to track roach infestations. But restaurant inspectors are on the look out for the 6-legged bugs all the time. This map shows where city health inspectors are reporting roach sightings on any given week.</p>
 
@@ -122,7 +133,7 @@ text-decoration: none;
 <form action="http://feedburner.google.com/fb/a/mailverify" method="post" target="popupwindow" onsubmit="window.open('http://feedburner.google.com/fb/a/mailverify?uri=roachmap/XgDN', 'popupwindow', 'scrollbars=yes,width=550,height=520');return true"><p><input type="text" style="width:145px" name="email" class="email"/><input type="hidden" value="roachmap/XgDN" name="uri"/><input type="hidden" name="loc" value="en_US"/><input type="submit" value="Subscribe" class="button" /></p></form>
 <div "clear"></div>
 <div id="footer">
-<a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/"><img alt="Creative Commons License" style="border-width:0; padding-right:10px; float:left;" src="http://i.creativecommons.org/l/by-sa/3.0/80x15.png" /></a><p><span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/InteractiveResource" property="dct:title" rel="dct:type"><a xmlns:cc="http://creativecommons.org/ns#" href="http://roachmap.com" property="cc:attributionName" rel="cc:attributionURL">Roach Map</a></span> by Niles Brooks, Jim Colgan, Max Shron, John Myles White and Chrys Wu is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/">Creative Commons Attribution-ShareAlike 3.0 Unported License</a>.</p>
+<a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/"><img alt="Creative Commons License" style="border-width:0; padding-right:10px; float:left;" src="http://i.creativecommons.org/l/by-sa/3.0/80x15.png" /></a><p><span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/InteractiveResource" property="dct:title" rel="dct:type"><a xmlns:cc="http://creativecommons.org/ns#" href="http://roachmap.com" property="cc:attributionName" rel="cc:attributionURL">Roach Map</a></span> by Niles Brooks, Jim Colgan, Max Shron, John Myles White and Chrys Wu is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/">Creative Commons Attribution-ShareAlike 3.0 Unported License</a> | <a href="about.html">About</a></p>
 </div>
 
 </div>
@@ -131,8 +142,8 @@ text-decoration: none;
 <div id="archives">Archives:
 
 <ul>
-  <li><a href="/">Week of Oct 31st 2010</a></li>
-  <li><a href="/">Week of Nov 7th 2010</a></li>
+  <li><a href="/">Week of Oct. 31, 2010</a></li>
+  <li><a href="/">Week of Nov. 7, 2010</a></li>
 </ul>
 
 </div>
