--- a/index.html
+++ b/index.html
@@ -1,14 +1,22 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="reset.css" />
-<link rel="stylesheet" type="text/css" href="style.css" />
+<link rel="stylesheet" type="text/css" href="/css/reset.css" />
+<link rel="stylesheet" type="text/css" href="/css/style.css" />
+<link rel="stylesheet" type="text/css" href="/css/colorbox.css" />
 
 </style>
 <title>Roach Map - Where are the roaches in NYC? - The Great Urban Hack</title>
 <meta name="description" content="A map of New York City cockroach reports in restaurants recorded by the Health Department." />
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.4.3/jquery.min.js"></script>
 <script type="text/javascript" src="http://use.typekit.com/vbg6ymp.js"></script>
 <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+<script type="text/javascript" src="/jquery/jquery.colorbox-min.js"></script>
+<script>
+		$(document).ready(function(){
+			$(".image").colorbox();
+		});
+</script>
 <script type="text/javascript">
 
   var _gaq = _gaq || [];
@@ -27,7 +35,7 @@
 <body>
 <div id="container">
 <h1>The New York City Roach Map</h1>
-<a href="/images/roachmap_2010-11-6.png"><img src="/images/roachmap_2010-11-6.png" class="map" alt="Where are the roaches? November 2010 map"></a><p>Cockroaches are gross. They spread germs. They defecate on our silverware. They live in our kitchens, our bathrooms. They thrive on our garbage, our leftover food.  And in a city of 8 million, they can be anywhere. But where are they exactly?</p>
+<a class='image' href="/images/roachmap_2010-11-6.png"><img src="/images/roachmap_2010-11-6.png" class="map" alt="Where are the roaches? November 2010 map"></a><p>Cockroaches are gross. They spread germs. They defecate on our silverware. They live in our kitchens, our bathrooms. They thrive on our garbage, our leftover food.  And in a city of 8 million, they can be anywhere. But where are they exactly?</p>
 
 <p>Right now there's no up-to-date way to track roach infestations. But restaurant inspectors are on the look out for the 6-legged bugs all the time. This map shows where city health inspectors are reporting roach sightings on any given week.</p>
 
@@ -35,6 +43,8 @@
 
 <p>Sign up below to be emailed a monthly snapshot of where the roaches are.</p>
 <form action="http://feedburner.google.com/fb/a/mailverify" method="post" target="popupwindow" onsubmit="window.open('http://feedburner.google.com/fb/a/mailverify?uri=roachmap/XgDN', 'popupwindow', 'scrollbars=yes,width=550,height=520');return true"><p><input type="text" style="width:145px" name="email" class="email"/><input type="hidden" value="roachmap/XgDN" name="uri"/><input type="hidden" name="loc" value="en_US"/><input type="submit" value="Subscribe" class="button" /></p></form>
+
+<p><a href="about.html">Learn more</a> about who's behind the Roach Map and how it was made.</p>
 <div class="clear"></div>
 <div id="footer">
 <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/"><img alt="Creative Commons License" style="border-width:0; padding-right:10px; float:left;" src="http://i.creativecommons.org/l/by-sa/3.0/80x15.png" /></a><p><span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/InteractiveResource" property="dct:title" rel="dct:type"><a xmlns:cc="http://creativecommons.org/ns#" href="http://roachmap.com" property="cc:attributionName" rel="cc:attributionURL">Roach Map</a></span> by Niles Brooks, Jim Colgan, Max Shron, John Myles White and Chrys Wu is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/">Creative Commons Attribution-ShareAlike 3.0 Unported License</a> | <a href="about.html"><b>About</b></a></p>
