--- a/about.html
+++ b/about.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="reset.css" />
-<link rel="stylesheet" type="text/css" href="style.css" />
+<link rel="stylesheet" type="text/css" href="/css/reset.css" />
+<link rel="stylesheet" type="text/css" href="/css/style.css" />
 <title>About the Roach Map - The Great Urban Hack</title>
 <script type="text/javascript" src="http://use.typekit.com/vbg6ymp.js"></script>
 <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
