Updated html files to current as of Nov.20.

--- a/archive.html
+++ b/archive.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/> 
 <link rel="stylesheet" type="text/css" href="/css/reset.css" />
 <link rel="stylesheet" type="text/css" href="/css/style.css" />
 <link rel="stylesheet" type="text/css" href="/css/colorbox.css" />
@@ -48,8 +49,7 @@
 <div id="archives">Archives:
 
 <ul>
-  <li><a href="/">Week of Oct. 31, 2010</a></li>
-  <li><a href="/">Week of Nov. 7, 2010</a></li>
+  <li><a href="/">Nov. 5, 2010 map</a></li>
 </ul>
 
 </div>
